--- a/PetPals-API/PetPals-API/appsettings.json
+++ b/PetPals-API/PetPals-API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=(LocalDb)\\MSSQLLocalDB;database=PetPalsDemoDB;Trusted_Connection=true"
+  }
 }
