--- a/PetPals/package.json
+++ b/PetPals/package.json
@@ -21,7 +21,9 @@
     "@aspnet/signalr": "^1.0.27",
     "bootstrap": "^5.2.0",
     "font-awesome": "^4.7.0",
+    "ngx-toastr": "^15.0.0",
     "rxjs": "~7.5.0",
+    "toastr": "^2.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
